--- a/src/cascadia/TerminalSettingsEditor/NewTabMenu.xaml
+++ b/src/cascadia/TerminalSettingsEditor/NewTabMenu.xaml
@@ -372,7 +372,7 @@
                             x:Uid="NewTabMenu_AddProfileButton"
                             HorizontalAlignment="Stretch"
                             VerticalAlignment="Stretch"
-                            Click="{x:Bind ViewModel.RequestAddSelectedProfileEntry}">
+                            Click="AddProfileButton_Clicked">
                         <Button.Content>
                             <FontIcon FontSize="{StaticResource StandardIconSize}"
                                       Glyph="&#xE710;" />
@@ -388,7 +388,7 @@
                         x:Uid="NewTabMenu_AddSeparatorButton"
                         HorizontalAlignment="Stretch"
                         VerticalAlignment="Stretch"
-                        Click="{x:Bind ViewModel.RequestAddSeparatorEntry}">
+                        Click="AddSeparatorButton_Clicked">
                     <Button.Content>
                         <FontIcon FontSize="{StaticResource StandardIconSize}"
                                   Glyph="&#xE710;" />
@@ -411,7 +411,7 @@
                             x:Uid="NewTabMenu_AddFolderButton"
                             HorizontalAlignment="Stretch"
                             VerticalAlignment="Stretch"
-                            Click="{x:Bind ViewModel.RequestAddFolderEntry}"
+                            Click="AddFolderButton_Clicked"
                             IsEnabled="False">
                         <Button.Content>
                             <FontIcon FontSize="{StaticResource StandardIconSize}"
@@ -433,7 +433,7 @@
                     <TextBox x:Uid="NewTabMenu_AddMatchProfiles_Commandline"
                              Text="{x:Bind ViewModel.ProfileMatcherCommandline, Mode=TwoWay}" />
                     <Button x:Name="AddMatchProfilesButton"
-                            Click="{x:Bind ViewModel.RequestAddProfileMatcherEntry}">
+                            Click="AddMatchProfilesButton_Clicked">
                         <Button.Content>
                             <StackPanel Orientation="Horizontal">
                                 <FontIcon FontSize="{StaticResource StandardIconSize}"
@@ -453,7 +453,7 @@
                         x:Uid="NewTabMenu_AddRemainingProfilesButton"
                         HorizontalAlignment="Stretch"
                         VerticalAlignment="Stretch"
-                        Click="{x:Bind ViewModel.RequestAddRemainingProfilesEntry}"
+                        Click="AddRemainingProfilesButton_Clicked"
                         IsEnabled="{x:Bind ViewModel.IsRemainingProfilesEntryMissing, Mode=OneWay}">
                     <Button.Content>
                         <FontIcon FontSize="{StaticResource StandardIconSize}"
