--- a/src/cascadia/TerminalSettingsEditor/NewTabMenu.xaml
+++ b/src/cascadia/TerminalSettingsEditor/NewTabMenu.xaml
@@ -76,10 +76,10 @@
                                 Style="{StaticResource NewTabMenuEntryControlsWrapper}">
                     <StackPanel Orientation="Horizontal"
                                 Spacing="10">
-                        <Image Width="16"
-                               Height="16"
-                               VerticalAlignment="Center"
-                               Source="{x:Bind ProfileEntry.Profile.Icon, Mode=OneWay}" />
+                        <IconSourceElement Width="16"
+                                           Height="16"
+                                           VerticalAlignment="Center"
+                                           IconSource="{x:Bind mtu:IconPathConverter.IconSourceWUX(ProfileEntry.Profile.EvaluatedIcon), Mode=OneTime}" />
                         <TextBlock VerticalAlignment="Center"
                                    Text="{x:Bind ProfileEntry.Profile.Name, Mode=OneWay}" />
                     </StackPanel>
@@ -359,7 +359,7 @@
                                     <IconSourceElement Grid.Column="0"
                                                        Width="16"
                                                        Height="16"
-                                                       IconSource="{x:Bind mtu:IconPathConverter.IconSourceWUX(Icon), Mode=OneTime}" />
+                                                       IconSource="{x:Bind mtu:IconPathConverter.IconSourceWUX(EvaluatedIcon), Mode=OneTime}" />
 
                                     <TextBlock Grid.Column="1"
                                                Text="{x:Bind Name}" />
