--- a/src/cascadia/QueryExtension/ExtensionPalette.xaml
+++ b/src/cascadia/QueryExtension/ExtensionPalette.xaml
@@ -46,7 +46,7 @@
             <mux:StackLayout x:Name="VerticalStackLayout"
                              Orientation="Vertical"
                              Spacing="16" />
-            <DataTemplate x:Key="QueryMessageTemplate"
+            <DataTemplate x:Key="RichQueryMessageTemplate"
                           x:DataType="local:ChatMessage">
                 <Grid Height="Auto"
                       Margin="4"
@@ -62,14 +62,11 @@
                                 BorderBrush="{ThemeResource MessageBorderBrush}"
                                 BorderThickness="{ThemeResource MessageBorderThickness}"
                                 CornerRadius="8">
-                        <TextBlock FontSize="14"
-                                   Foreground="{ThemeResource TextOnAccentFillColorPrimaryBrush}"
-                                   Text="{x:Bind MessageContent}"
-                                   TextWrapping="WrapWholeWords" />
+                        <ContentPresenter Content="{x:Bind RichBlock}" />
                     </StackPanel>
                 </Grid>
             </DataTemplate>
-            <DataTemplate x:Key="TextResponseMessageTemplate"
+            <DataTemplate x:Key="RichResponseMessageTemplate"
                           x:DataType="local:ChatMessage">
                 <Grid Height="Auto"
                       Margin="4"
@@ -85,54 +82,13 @@
                                 BorderBrush="{ThemeResource MessageBorderBrush}"
                                 BorderThickness="{ThemeResource MessageBorderThickness}"
                                 CornerRadius="8">
-                        <TextBlock FontSize="14"
-                                   Foreground="{ThemeResource TextFillColorPrimaryBrush}"
-                                   IsTextSelectionEnabled="False"
-                                   Text="{x:Bind MessageContent}"
-                                   TextWrapping="WrapWholeWords" />
-                    </StackPanel>
-                </Grid>
-            </DataTemplate>
-            <DataTemplate x:Key="CodeResponseMessageTemplate"
-                          x:DataType="local:ChatMessage">
-                <Grid Height="Auto"
-                      Margin="4"
-                      HorizontalAlignment="Left">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
-                    <StackPanel Grid.Row="1"
-                                Padding="16,8,16,8"
-                                Background="{ThemeResource ControlAltFillColorQuarternaryBrush}"
-                                BorderBrush="{ThemeResource MessageBorderBrush}"
-                                BorderThickness="{ThemeResource MessageBorderThickness}"
-                                CornerRadius="8">
-                        <Border Padding="8,4,8,4"
-                                Background="{ThemeResource ControlAltFillColorSecondaryBrush}"
-                                CornerRadius="4">
-                            <StackPanel Orientation="Horizontal"
-                                        Spacing="8">
-                                <TextBlock MaxWidth="400"
-                                           FontFamily="Cascadia Code"
-                                           FontSize="12"
-                                           Foreground="{ThemeResource AccentTextFillColorPrimaryBrush}"
-                                           IsTextSelectionEnabled="False"
-                                           Text="{x:Bind MessageContent}"
-                                           TextWrapping="Wrap" />
-                                <FontIcon VerticalAlignment="Center"
-                                          FontSize="16"
-                                          Foreground="{ThemeResource TextFillColorPrimaryBrush}"
-                                          Glyph="&#xE8C8;" />
-                            </StackPanel>
-                        </Border>
+                        <ContentPresenter Content="{x:Bind RichBlock}" />
                     </StackPanel>
                 </Grid>
             </DataTemplate>
             <local:ExtensionPaletteMessageTemplateSelector x:Key="ChatMessageTemplateSelector"
-                                                           CodeResponseMessageTemplate="{StaticResource CodeResponseMessageTemplate}"
-                                                           QueryMessageTemplate="{StaticResource QueryMessageTemplate}"
-                                                           TextResponseMessageTemplate="{StaticResource TextResponseMessageTemplate}" />
+                                                           RichQueryMessageTemplate="{StaticResource RichQueryMessageTemplate}"
+                                                           RichResponseMessageTemplate="{StaticResource RichResponseMessageTemplate}" />
             <Style TargetType="ListViewHeaderItem">
                 <Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}" />
                 <Setter Property="FontSize" Value="{ThemeResource ListViewHeaderItemThemeFontSize}" />
@@ -284,7 +240,6 @@
                               VerticalAlignment="Bottom"
                               HorizontalContentAlignment="Stretch"
                               IsItemClickEnabled="True"
-                              ItemClick="_listItemClicked"
                               ItemTemplateSelector="{StaticResource ChatMessageTemplateSelector}"
                               ItemsSource="{Binding Source={StaticResource MessagesCollectionViewSource}}"
                               SelectionMode="None">
