Unify our `padding` parsers, make SUI operate on `Thickness` structs
The code in #17909 was not completely right for padding values with
fewer than four components, and it was doing some fragile string math
(that is: if you wanted to change the third element in the padding it
would parse out the whole thing, edit the third value, and then format
it again).

This pull request moves the control's padding parser into cppwinrt_utils
(for lack of a better place) and makes the settings UI use it to parse
the padding out into a `Thickness` as early as possible. Then, the
controls operate directly on the Thickness' members rather than parsing
the padding string again.

To handle two-way serialization properly, we also required a function
that converts a thickness back into a reduced string representation
(i.e. when all four values are N, it will return "N").

As a bonus, this pull request also:
- removes another use of `std::getline`
- fixes an issue where resetting the padding would change it
  (infinitesimally) and cause it to be set again
- adds a readout of the current padding value in the expander itself

--- a/src/cascadia/TerminalSettingsEditor/Profiles_Appearance.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Profiles_Appearance.xaml
@@ -126,6 +126,7 @@
                                         ClearSettingValue="{x:Bind Profile.ClearPadding}"
                                         HasSettingValue="{x:Bind Profile.HasPadding, Mode=OneWay}"
                                         SettingOverrideSource="{x:Bind Profile.PaddingOverrideSource, Mode=OneWay}"
+                                        CurrentValue="{x:Bind Profile.Padding, Mode=OneWay}"
                                         Style="{StaticResource ExpanderSettingContainerStyle}">
                     <Border Margin="0,12,0,12"
                             Padding="2,0,2,0"
