--- a/src/cascadia/TerminalSettingsEditor/EditAction.xaml
+++ b/src/cascadia/TerminalSettingsEditor/EditAction.xaml
@@ -235,24 +235,31 @@
             <local:ActionsTemplateSelectors x:Key="ActionsTemplateSelector"
                                             SendInputTemplate="{StaticResource SendInputTemplate}"
                                             CloseTabTemplate="{StaticResource CloseTabTemplate}"/>
-
+            <DataTemplate x:Key="ListItemTemplate"
+                          x:DataType="local:ArgWrapper">
+                <ListViewItem HorizontalContentAlignment="Stretch" />
+            </DataTemplate>
             <DataTemplate x:Key="UInt32Template"
                           x:DataType="local:ArgWrapper">
-                <StackPanel Orientation="Horizontal">
-                    <muxc:NumberBox Value="{x:Bind mtu:Converters.UnboxUInt32(Value), Mode=TwoWay, BindBack=DoubleBindBack}"
-                                    Style="{StaticResource NumberBoxSettingStyle}"
-                                    Minimum="0"
-                                    Maximum="999"
-                                    LargeChange="1"
-                                    SmallChange="1"/>
-                </StackPanel>
+                <ListViewItem>
+                    <StackPanel Orientation="Horizontal">
+                        <muxc:NumberBox Value="{x:Bind mtu:Converters.UnboxUInt32(Value), Mode=TwoWay, BindBack=DoubleBindBack}"
+                                        Style="{StaticResource NumberBoxSettingStyle}"
+                                        Minimum="0"
+                                        Maximum="999"
+                                        LargeChange="1"
+                                        SmallChange="1"/>
+                    </StackPanel>
+                </ListViewItem>
             </DataTemplate>
 
             <DataTemplate x:Key="StringTemplate"
                           x:DataType="local:ArgWrapper">
-                <StackPanel Orientation="Horizontal">
-                    <TextBox Text="{x:Bind mtu:Converters.UnboxString(Value), Mode=TwoWay, BindBack=StringBindBack}" />
-                </StackPanel>
+                <ListViewItem>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBox Text="{x:Bind mtu:Converters.UnboxString(Value), Mode=TwoWay, BindBack=StringBindBack}" />
+                    </StackPanel>
+                </ListViewItem>
             </DataTemplate>
 
             <local:ArgsTemplateSelectors x:Key="ArgsTemplateSelector"
@@ -276,8 +283,11 @@
                       SelectedItem="{x:Bind ViewModel.ProposedShortcutAction, Mode=TwoWay}"
                       IsEnabled="{x:Bind ViewModel.IsUserAction}"
                       Visibility="{x:Bind ViewModel.IsUserAction}"/>
-            <muxc:ItemsRepeater ItemsSource="{x:Bind ViewModel.ActionArgsVM.ArgValues, Mode=OneWay}"
-                                ItemTemplate="{StaticResource ArgsTemplateSelector}" />
+            <ListView ItemsSource="{x:Bind ViewModel.ActionArgsVM.ArgValues, Mode=OneWay}"
+                      ChoosingItemContainer="_choosingItemContainer"
+                      SelectionMode="None"
+                      AllowDrop="False"
+                      CanReorderItems="False" />
             <ListView ItemTemplate="{StaticResource KeyChordTemplate}"
                       ItemsSource="{x:Bind ViewModel.KeyChordViewModelList, Mode=OneWay}"
                       SelectionMode="None">
